# satellitePRJ

./: CMakeLists.txt  README.txt  build.bat  build.sh  build.txt  communication_quality_service.cpp  communication_quality_service.h  delay_service.cpp  delay_service.h  link_margin_service.h  main.cpp  visibility_calculator.cpp  visibility_calculator.h  visibility_service.h
src/: Funs.cpp  Funs.h  communication_quality_service.h  delay_service.h  interference_assessment_service.cpp  interference_assessment_service.h  link_assessment_service.cpp  link_assessment_service.h  link_margin_service.cpp  link_margin_service.h  simplified_setup_time_service.cpp  simplified_setup_time_service.h  visibility_calculator.h  visibility_service.cpp  visibility_service.h
